--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-quick-sqlite",
-  "version": "8.0.2",
+  "name": "@react-native-library/quick-sqlite",
+  "version": "1.0.0",
   "description": "Fast SQLite for react-native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
